[gd_scene load_steps=4 format=3 uid="uid://co6tfpliu178t"]

[ext_resource type="Theme" uid="uid://cbc4dyquppe6q" path="res://app/themes/godot4.tres" id="1_3ad0l"]
[ext_resource type="Script" path="res://scenes/editors/lineage_editor/popup_windows/trunk_settings.gd" id="2_5rlrl"]
[ext_resource type="Texture2D" uid="uid://jhavtj0f0yq5" path="res://icons/eye_open.svg" id="3_svnsx"]

[node name="TrunkSettings" type="PopupPanel"]
transparent_bg = true
size = Vector2i(220, 200)
visible = true
transparent = true
theme = ExtResource("1_3ad0l")
script = ExtResource("2_5rlrl")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 4.0
offset_right = -3.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="WidthLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "$WIDTH"

[node name="WidthSpinBox" type="SpinBox" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 125.0
max_value = 2000.0
value = 125.0

[node name="HeightLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "$HEIGHT"

[node name="HeightSpinBox" type="SpinBox" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 125.0
max_value = 2000.0
value = 125.0

[node name="Visibility" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VisibilityLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/Visibility"]
layout_mode = 2
text = "$VISIBILITY"

[node name="Control" type="Control" parent="Control/MarginContainer/VBoxContainer/Visibility"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VisibilityCheckButton" type="CheckButton" parent="Control/MarginContainer/VBoxContainer/Visibility"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_svnsx")

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/WidthSpinBox" to="." method="_on_width_spin_box_value_changed"]
[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/HeightSpinBox" to="." method="_on_height_spin_box_value_changed"]
[connection signal="toggled" from="Control/MarginContainer/VBoxContainer/Visibility/VisibilityCheckButton" to="." method="_on_visibility_check_button_toggled"]
